@@ -11,8 +11,8 @@ version '1.5.4d'
 sourceCompatibility = 13
 
 dependencies {
-  //implementation group: "net.dv8tion", name: "JDA", version: "4.0.0_62"
-  implementation group: "com.github.DV8FromTheWorld", name: "JDA", version: "development-SNAPSHOT"
+  implementation group: "net.dv8tion", name: "JDA", version: "4.0.0_62"
+  //implementation group: "com.github.DV8FromTheWorld", name: "JDA", version: "development-SNAPSHOT"
   implementation group: "io.github.cdimascio", name: "java-dotenv", version: "5.1.3"
   implementation group: "ch.qos.logback", name: "logback-classic", version: "1.3.0-alpha4"
   implementation group: "org.slf4j", name: "slf4j-api", version: "2.0.0-alpha1"
@@ -24,13 +24,21 @@ dependencies {
   implementation group: "io.github.classgraph", name: "classgraph", version: "4.8.53"
   implementation group: "org.apache.commons", name: "commons-text", version: "1.8"
   implementation group: "org.apache.commons", name: "commons-lang3", version: "3.9"
-  implementation group: "com.google.code.gson", name: "gson", version: "2.8.6"
+  implementation group: "org.yaml", name: "snakeyaml", version: "1.25"
 }
 
 repositories {
   jcenter()
   mavenCentral()
   maven { url 'https://jitpack.io' }
+}
+
+tasks.withType(JavaCompile).each {
+  it.options.compilerArgs.add('--enable-preview')
+}
+
+test {
+  jvmArgs(['--enable-preview'])
 }
 
 defaultTasks "afterBuild"
